--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
           <div class="row">
             <div class="col">
               <h2 id="tituloFormulario"></h2>
-                <form id="form1" method="post" action="enviar.php">
+                <form id="dudaForm" class="my-5">
+                  <div id="form1">
                     <div class="mb-3">
-                      <label for="nombre" class="form-label">Nombre</label>
+                      <label for="nombre" class="form-label">Nombre y Apellido</label>
                       <input type="text" class="form-control" id="nombre">
                       <div id="chequeoNombre"></div>
                     </div>
@@ -46,10 +47,12 @@
                       <div id="chequeoEmail"></div>
                     </div>
                     <div class="mb-3">
-                      <label for="mail" class="form-label">Duda</label>
+                      <label for="duda" class="form-label">Duda</label>
                       <input type="text" class="form-control" id="duda">
+                      <div id="chequeoDuda"></div>
                     </div>
-                    <button type="submit" id="btnEnviar" class="btn btn-primary">Enviar</button>
+                    <button class="btn btn-primary">Enviar</button>
+                  </div>
                 </form>
 
         </div>
@@ -59,6 +62,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/script.js"></script>
     
   </body>
