--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tienda Balboa Fitness</title>
+    <link rel="shortcut icon" href="./images/logo.ico">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
@@ -24,7 +25,7 @@
 
           <div class="col text-center py-5"> 
             <a href="./compra.html">
-            <button  type="button" class="btn btn-success btn-lg"><i class='bx bxs-cart'></i> Ver carrito
+            <button  type="button" class="btn btn-success btn-lg"><i class='bx bx-shopping-bag'></i> Ver compra
             </button>
           </a>
             
@@ -64,6 +65,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/carrodecompras.js"></script>
     
   </body>
 </html>
